# TareaCorta

./: CMakeLists.txt  README.md  main.cpp
Hearder File/: ManegerFile.h  Ordenamiento.h  PagedArray.h  QuickSort.h  insertionsort.h  quicksort.h  selectionsort.h
MemoryManeger/: GestorLRU.cpp  GestorLRU.h  GestorMemoria.h  Nodo.h
